spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 main {
-    margin: 120px auto 0;
+    margin: 150px auto 0;
 }
 
 ul {
@@ -25,8 +25,8 @@ ul {
 
 /* =========================== Common Css End ====================== */
 
-/* ============================== Left part =====================*/
-.trashMain {
+/* ============================== Left part Start =====================*/
+.taskMainLeft {
     border: 1px solid rgba(241, 241, 241, 0.3);
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
@@ -37,22 +37,22 @@ ul {
     height: 100%;
 }
 
-.trashMain h2 {
+.taskMainLeft h2 {
     font-size: 22px;
     font-weight: 700;
     color: #D9D9D9;
     border-bottom: 1px solid rgba(241, 241, 241, 0.5);
     padding-bottom: 10px;
-    margin-bottom: 40px;
+    margin: 0 24px 30px 0;
 }
 
-.trashMain ul {
+.taskMainLeft ul {
     height: 464px;
     padding-right: 24px;
     overflow-y: auto;
 }
 
-.trashMain ul li {
+.taskMainLeft ul li {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,26 +60,32 @@ ul {
     padding: 10px 0;
 }
 
-.trashMain ul li span {
+.taskMainLeft ul li span {
     width: 9%;
     display: flex;
     justify-content: space-between;
 }
 
-.trashMain ul li span i {
+.taskMainLeft ul li span i {
     font-style: 26px;
     color: #bbbbbb;
 
 }
 
-/* ============================== Right part ===================== */
+/* ============================== Right part Start ===================== */
 
-.taskMain {
+.taskMainRight {
     width: 648px;
 }
 
+.inputTask {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 24px;
+}
+
 .inputTask input {
-    width: 80%;
+    width: 100%;
     padding: 10px 24px;
     border: none;
     -webkit-border-radius: 10px;
@@ -90,7 +96,7 @@ ul {
 }
 
 .inputTask button {
-    padding: 10px 24px;
+    padding: 10px 20px;
     border: none;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -99,7 +105,7 @@ ul {
     border-radius: 10px;
     font-weight: 600;
     color: #CF414B;
-    background: #bbbbb;
+    background: #fff;
 }
 
 .taskBox {
@@ -122,7 +128,7 @@ ul {
     color: transparent;
     border-bottom: 1px solid #852170;
     padding-bottom: 10px;
-    margin-bottom: 24px;
+    margin: 0 24px 14px 0;
 }
 
 .taskBox ul {
